cc-base/main/default/objects/Exam__c/Exam__c.object-meta.xml
<CustomObject>
    <description>Exam attempts for a certification.</description>
    <label>Exam</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Exam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>