cc-base/main/default/objects/Exam__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Master lookup to the Certification</description>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>