cc-base/main/default/objects/Exam__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date Exam was taken.</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>