cc-base/main/default/objects/Exam__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Exam Version</description>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>