cc-base/main/default/objects/Exam__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <description>Certification Exam</description>
    <label>Certification</label>
</RecordType>