cc-base/main/default/objects/Exam__c/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <description>Maintenance Exam</description>
    <label>Maintenance</label>
</RecordType>